--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "serve": "concurrently \"npm run dev\" \"npm run mock\"",
     "build": "next build",
     "start": "next start",
     "mock": "json-server -w db.json -p 4200 -d 450"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^14.14.27",
     "@types/react": "^17.0.2",
+    "concurrently": "^5.3.0",
     "typescript": "^4.1.5"
   }
 }
