--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@layouts": [
-        "src/layouts"
-      ],
-      "@layouts/*": [
-        "src/layouts/*"
-      ]
+      "@components": [ "src/components", "src/components/*" ],
+      "@layouts": [ "src/layouts", "src/layouts/*" ]
     },
     "target": "es5",
     "lib": [
